# smallpt-hs

./: LICENSE  Makefile  README.md  bench.hs  profile.hs  smallpt-hs.cabal  smallpt-hs.hs
Smallpt/: Mutable.hs  Storable.hs  Unboxed.hs
cbits/: smallpt.cpp
